# postprocess4validation

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/postprocess4validation/core/: __init__.py  axes_with_plot_data.py  configure_logger.py  csv_data_loader.py  data_loader.py  data_set.py  exceptions.py  line.py  metrics_file_handler.py  openfoam_utils.py  plane.py  plane_set.py  point_data.py  utils.py  visualization.py
src/postprocess4validation/preprocess/: __init__.py  cli.py  create_files.py  parser.py  utils.py
src/postprocess4validation/qualitative/: __init__.py  analysis.py  cli.py  lines_data_loader.py  parser.py  utils.py  visualization.py
src/postprocess4validation/quantitative/: __init__.py  analysis.py  cli.py  computations.py  parser.py  probes_data_loader.py  utils.py  visualization.py  zoom.py
tests/: README.md  conftest.py  test_core.py  test_quantitative.py
tests/static/experiment_data/: expData.csv
tests/static/simulation_data/simulation_data/testA/postProcessing/cuttingPlaneZ/682/: zNormal.vtp
tests/static/simulation_data/simulation_data/testA/postProcessing/lines/682/: line_-0.04_0_UMag_k.xy  line_0.16_0_UMag_k.xy
tests/static/simulation_data/simulation_data/testA/postProcessing/probes/0/: UMag
tests/static/simulation_data/simulation_data/testB/postProcessing/lines/682/: line_0.1_0.01_UMag_k.xy  line_0.1_0_UMag_k.xy  line_0_0_UMag_k.xy
tests/static/simulation_data/simulation_data/testB/postProcessing/probes/0/: UMag  k
tests/static/simulation_data/simulation_data/testB/postProcessing/sampledPatches/682/: building.vtp
tests/static/simulation_data/testA/postProcessing/lines/682/: line_-0.02_0_UMag_k.xy  line_-0.06_0.01_UMag_k.xy  line_0_0.01_UMag_k.xy
tests/static/simulation_data/testA/postProcessing/probes/0/: k
tests/static/simulation_data/testA/postProcessing/reattachment/682/: ground_wallShearStress.xy
tests/static/simulation_data/testA/postProcessing/sampledPatches/682/: ground.vtp
tests/static/simulation_data/testB/postProcessing/cuttingPlaneY/682/: yNormal.vtp
tests/static/simulation_data/testB/postProcessing/lines/682/: line_-0.02_0.01_UMag_k.xy  line_-0.06_0_UMag_k.xy  line_0.26_0_UMag_k.xy
tests/static/simulation_data/testB/postProcessing/reattachment/682/: roof_wallShearStress.xy
