[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "postProcess4Validation"
version = "0.1.0a0"
description = "A Python tool for quantitative and qualitative postprocessing simulation data."
authors = [{ name = "ptava", email = "tavazzipietro@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["post-processing", "data analysis", "CFD", "OpenFOAM", "validation"]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "numpy-stl>=3.2.0",
    "setuptools>=80.8.0",
    "scipy>=1.15.3",
    "trimesh>=4.6.12",
    "mplcursors",
    "networkx>=3.4.2",
    "scipy>=1.15.3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ptava/postProcess4Validation"
"Bug Tracker" = "https://github.com/ptava/postProcess4Validation/issues"
"Documentation" = "https://github.com/ptava/postProcess4Validation/docs"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pandas",
    "autopep8",
    "pyright",
]
cli = ["argparse"]
docs = ["sphinx", "sphinx-rtd-theme"]
extras = [
    "pyqt5>=5.15.11",
]

[tool.poetry.dependencies]
argcomplete = { version = "^3.6.2" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
preprocess-cli = "postprocess4validation.preprocess.cli:main"
quantitative-cli = "postprocess4validation.quantitative.cli:main"
qualitative-cli = "postprocess4validation.qualitative.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.pyright]
include = ["src/postprocess4validation"]
exclude = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
